# CSRF_POC_GEN

./: .gitignore  README.md  csrf_poc_gen.py  pyproject.toml  sample_request.txt  setup.py
.github/workflows/: publish.yml
